--- a/arxiv/2021_10_arxiv.html
+++ b/arxiv/2021_10_arxiv.html
@@ -231,7 +231,40 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.10451">https://arxiv.org/abs/2110.10451</a></span> Unconventional Superconductivity in UTe2</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.10692">https://arxiv.org/abs/2110.10692</a></span> Emergent anomalies and generalized Luttinger theorems in metals and semimetals ***** (Chong Wang, A.A. Burkov)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.10894">https://arxiv.org/abs/2110.10894</a></span> Massless Dirac magnons in the two dimensional van der Waals honeycomb magnet CrCl3 (Wonhyuk Shon)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.11138">https://arxiv.org/abs/2110.11138</a></span> The emergence of gapless quantum spin liquid from deconfined quantum critical point **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.11138">https://arxiv.org/abs/2110.11138</a></span> The emergence of gapless quantum spin liquid from deconfined quantum critical point **</p><br>
+<p class="p1">20211025</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.11375">https://arxiv.org/abs/2110.11375</a></span> Many-Body Quadrupolar Sum Rule for Higher-Order Topological Insulator ***** (Wonjun Lee, Gil Young Cho, Byungmin Kang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.15320">https://arxiv.org/abs/2109.15320</a></span> C-P-T Fractionalization ***** (Juven Wang)</p>
+<p class="p2"><br></p>
+<p class="p1">20211026</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.11962">https://arxiv.org/abs/2110.11962</a></span> Gate-tunable heavy fermion quantum criticality in a moir ́e Kondo lattice (Allan H. MacDonald)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.12303">https://arxiv.org/abs/2110.12303</a></span> Acoustic-phonon-mediated superconductivity in Bernal bilayer graphene **** (Jay D. Sau, Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.13024">https://arxiv.org/abs/2110.13024</a></span> Berry-Chern monopoles and spectral flows ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.11978">https://arxiv.org/abs/2110.11978</a></span> Renormalization group in quantum critical theories with Harris-marginal disorder ***** (Andrew Lucas, Leo Radzihovsky)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.12611">https://arxiv.org/abs/2110.12611</a></span> Spontaneously Broken Subsystem Symmetries *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.12861">https://arxiv.org/abs/2110.12861</a></span> <b>Gapless edge modes in (4+1)-dimensional topologically massive tensor gauge theory and anomaly inflow for subsystem symmetry **</b></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.11980">https://arxiv.org/abs/2110.11980</a></span> Multipartitioning topological phases by vertex states and quantum entanglement (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.13066">https://arxiv.org/abs/2110.13066</a></span> Effective Field Theories for Gapless Phases with Fractons via a Coset Construction **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11039">https://arxiv.org/abs/2109.11039</a></span> Classification of (2+1)D invertible fermionic topological phases with symmetry *** (Maissam Barkeshli, Yu-An Chen, Po-Shen Hsin, Naren Manjunath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.11965">https://arxiv.org/abs/2110.11965</a></span> A universal tripartite entanglement signature of ungappable edge states (Michael P. Zaletel)</p>
+<p class="p2"><br></p>
+<p class="p1">20211027</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.13875">https://arxiv.org/abs/2110.13875</a></span> Noncommutative gauge symmetry in the fractional quantum Hall effect *** (Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.13203">https://arxiv.org/abs/2110.13203</a></span> Notes from the bulk: metric dependence of the edge states of Chern-Simons theory ** (Nicola Maggiore)</p>
+<p class="p2"><br></p>
+<p class="p1">20211028</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.13925">https://arxiv.org/abs/2110.13925</a></span> Fractionalization and anyonic statistics in the integer quantum Hall collider (June-Young M. Lee,2 H.-S. Sim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.14268">https://arxiv.org/abs/2110.14268</a></span> Nematicity-enhanced superconductivity in systems with a non-Fermi liquid behavior ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.13508">https://arxiv.org/abs/2110.13508</a></span> Gauge-invariant perturbation theory on the Schwarzschild background spacetime Part I : — Formulation and odd-mode perturbations —</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.13512">https://arxiv.org/abs/2110.13512</a></span> Gauge-invariant perturbation theory on the Schwarzschild background spacetime Part II: — Even-mode perturbations —</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.13519">https://arxiv.org/abs/2110.13519</a></span> Gauge-invariant perturbation theory on the Schwarzschild background spacetime Part III: — Realization of exact solutions —</p>
+<p class="p2"><br></p>
+<p class="p1">20211029</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.14674">https://arxiv.org/abs/2110.14674</a></span> Detecting symmetry breaking in magic angle graphene using scanning tunneling microscopy ** (M. P. Zaletel)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.14841">https://arxiv.org/abs/2110.14841</a></span> Magnetic suppression of non-Hermitian skin effects ** (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.15353">https://arxiv.org/abs/2110.15353</a></span> Insulator-metal quantum phase transition in heavy topological insulators ** (Shouvik Sur, Pallab Goswami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.14654">https://arxiv.org/abs/2110.14654</a></span> Gravitational anomaly of 3 + 1 dimensional Z2 toric code with fermionic charges and fermionic loop self-statistics ***** (Lukasz Fidkowski, Jeongwan Haah, Matthew B. Hastings)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.14644">https://arxiv.org/abs/2110.14644</a></span> Exactly Solvable Lattice Hamiltonians and Gravitational Anomalies ***** (Yu-An Chen, Po-Shen Hsin)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
