--- a/arxiv/2021_11_arxiv.html
+++ b/arxiv/2021_11_arxiv.html
@@ -126,6 +126,37 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20211101</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.16248">https://arxiv.org/abs/2106.16248</a></span> Gauge Enhanced Quantum Criticality Beyond the Standard Model ***** (Juven Wang, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.12861">https://arxiv.org/abs/2110.12861</a></span> Gapless edge modes in (4+1)-dimensional topologically massive tensor gauge theory and anomaly inflow for subsystem symmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.04088">https://arxiv.org/abs/2104.04088</a></span> Emergent Replica Conformal Symmetry in Non-Hermitian SYK2 Chains ***** (Pengfei Zhang, Shao-Kai Jian, Chunxiao Liu, Xiao Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.08543">https://arxiv.org/abs/2012.08543</a></span> Quantum phases of two-dimensional Z2 gauge theory coupled to single-component fermion matter *** (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.15471">https://arxiv.org/abs/2110.15471</a></span> Decoherent Histories Quantum Mechanics and Copenhagen Quantum Mechanics (Murray Gell-Mann, James. B. Hartle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.15549">https://arxiv.org/abs/2110.15549</a></span> Competition of first-order and second-order topology on the honeycomb lattice **</p>
+<p class="p2"><br></p>
+<p class="p1">20211102</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.00807">https://arxiv.org/abs/2111.00807</a></span> Superfluidity and Quantum Geometry in Twisted Multilayer Systems ***** (Bogdan A. Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.00432">https://arxiv.org/abs/2111.00432</a></span> Power functional theory for many-body dynamics</p>
+<p class="p2"><br></p>
+<p class="p1">20211103</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01331">https://arxiv.org/abs/2111.01331</a></span> Fractional Mutual Statistics on Integer Quantum Hall Edges (June-Young M. Lee, Cheolhee Han, H.-S. Sim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01611">https://arxiv.org/abs/2111.01611</a></span> Intertwining SU(N) symmetry and frustration on a honeycomb lattice *** (Gang Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01139">https://arxiv.org/abs/2111.01139</a></span> Non-Invertible Duality Defects in 3+1 Dimensions ***** (Po-Shen Hsin, Ho Tat Lam, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01141">https://arxiv.org/abs/2111.01141</a></span> Kramers-Wannier-like duality defects in (3 + 1)d gauge theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01174">https://arxiv.org/abs/2111.01174</a></span> Doping a topological insulator: a promising strategy to find topological superconductors?</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01202">https://arxiv.org/abs/2111.01202</a></span> Sub-leading conformal dimensions at the O(4) Wilson-Fisher fixed point</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01152">https://arxiv.org/abs/2111.01152</a></span> Topological Phases in AB-stacked MoTe2/WSe2: Z2 Topological Insulators, Chern Insulators, and Topological Charge Density Waves (Sankar Das Sarma)</p>
+<p class="p2"><br></p>
+<p class="p1">20211104</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01805">https://arxiv.org/abs/2111.01805</a></span> Giant proximity exchange and flat Chern band in 2D magnet-semiconductor heterostructures *** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.02124">https://arxiv.org/abs/2111.02124</a></span> Cancellation of IR Divergences in 3d Abelian Gauge Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.02142">https://arxiv.org/abs/2111.02142</a></span> A spin-charge flip symmetric fixed point in 2+1d with massless Dirac fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01812">https://arxiv.org/abs/2111.01812</a></span> Phase diagrams of SO(<span class="s2">𝑵</span>) Majorana-Hubbard models: Dimerization, internal symmetry breaking, and fluctuation-induced first-order transitions *** (Lukas Janssen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.02346">https://arxiv.org/abs/2111.02346</a></span> Slowly decaying real-time oscillations in instanton crystal **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01854">https://arxiv.org/abs/2111.01854</a></span> Gapped Quantum Systems: From Higher Dimensional Lieb-Schultz-Mattis to the Quantum Hall Effect *** (Matthew B. Hastings)</p>
+<p class="p2"><br></p>
+<p class="p1">20211105</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.03058">https://arxiv.org/abs/2111.03058</a></span> Moir ́e metal for catalysis ***** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.02433">https://arxiv.org/abs/2111.02433</a></span> Three-Dimensional Real Space Invariants, Obstructed Atomic Insulators and A New Principle for Active Catalytic Sites (B. Andrei Bernevig)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
