--- a/arxiv/2021_11_arxiv.html
+++ b/arxiv/2021_11_arxiv.html
@@ -157,6 +157,111 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1">20211105</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.03058">https://arxiv.org/abs/2111.03058</a></span> Moir ́e metal for catalysis ***** (Liang Fu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.02433">https://arxiv.org/abs/2111.02433</a></span> Three-Dimensional Real Space Invariants, Obstructed Atomic Insulators and A New Principle for Active Catalytic Sites (B. Andrei Bernevig)</p>
+<br>
+<p class="p1">20211108</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.05322">https://arxiv.org/abs/2111.05322</a></span> Magnus Hall Effect In Three-Dimensional Topological Semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.05048">https://arxiv.org/abs/2111.05048</a></span> Observation of Emergent Z2 Gauge Invariance in a Superconducting Circuit</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.04891">https://arxiv.org/abs/2111.04891</a></span> Dielectric response of electrons with strong local correlations and long-ranged Coulomb interactions</p>
+<p class="p2"><br></p>
+<p class="p1">20211109</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.12107">https://arxiv.org/abs/2103.12107</a></span> Dynamical Fragile Topology in Floquet Crystals (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.02986">https://arxiv.org/abs/2110.02986</a></span> RG and Stability in the Exciton Bose Liquid ***** (Ethan Lake)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.05865">https://arxiv.org/abs/2111.05865</a></span> MATBG as Topological Heavy Fermion: I. Exact Mapping and Correlated Insulators (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.05921">https://arxiv.org/abs/2111.05921</a></span> THE MANY FACES (PHASES) OF STRONG CORRELATIONS ***** (Silke Paschen, Qimiao Si)</p>
+<p class="p2"><br></p>
+<p class="p1">20211110</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.03321">https://arxiv.org/abs/2111.03321</a></span> Superconducting pairing from repulsive interactions of fermions in a flat-band system</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.03613">https://arxiv.org/abs/2111.03613</a></span> Boundary criticality of the 3d O(N) model: from normal to extraordinary **** (Max A. Metlitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.03625">https://arxiv.org/abs/2111.03625</a></span> Quadrupolar magnetic excitations in an isotropic spin-1 antiferromagnet (Sang-Wook Cheong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.03348">https://arxiv.org/abs/2111.03348</a></span> Exceptional Rings with Bounded Fermi Surfaces in Three-Dimensional Heavy-Fermion Systems Revealed by DMFT **</p>
+<p class="p2"></p>
+<p class="p1">20211111</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.05779">https://arxiv.org/abs/2111.05779</a></span> Universality of Hofstadter butterflies on hyperbolic lattices (Igor Boettcher )</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.05429">https://arxiv.org/abs/2111.05429</a></span> Magnetotropic Response in Ruthenium Chloride (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.05383">https://arxiv.org/abs/2111.05383</a></span> Path Integrals from Spacetime Quantum Actions</p>
+<p class="p2"><br></p>
+<p class="p1">20211112</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2006.04204">https://arxiv.org/abs/2006.04204</a></span> Nielsen-Ninomiya Theorem with Bulk Topology: Duality in Floquet and Non-Hermitian Systems** (Masatoshi Sato)</p>
+<p class="p2"><br></p>
+<p class="p1">20211115</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2105.07568">https://arxiv.org/abs/2105.07568</a></span> Time reversal symmetry breaking and d-wave superconductivity of triple-point fermions **** (Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.07290">https://arxiv.org/abs/2111.07290</a></span> Axion Electrodynamics in Topological Insulators for beginners *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.07335">https://arxiv.org/abs/2111.07335</a></span> Rigorous Index Theory for One-Dimensional Interacting Topological Insulators *** (Hal Tasaki)<br>
+</p>
+<p class="p1">20211116</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.06703">https://arxiv.org/abs/2111.06703</a></span> Introduction to Majorana Zero Modes in a Kitaev Chain *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.08041">https://arxiv.org/abs/2111.08041</a></span> Spontaneous breaking of multipole symmetries *** (Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.08035">https://arxiv.org/abs/2111.08035</a></span> Measurement-induced entanglement phase transitions in variational quantum circuits *** (Yong Baek Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20211117</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.15132">https://arxiv.org/abs/2012.15132</a></span> Geometric characterization of anomalous Landau levels of isolated flat bands *** (Yoonseok Hwang, Jun-WonRhim, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2105.00561">https://arxiv.org/abs/2105.00561</a></span> Correlation-induced triplet pairing superconductivity in graphene-based moir ́e systems (Jay D. Sau, Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.14637">https://arxiv.org/abs/2107.14637</a></span> Conformal bootstrap bounds for the U(1) Dirac spin liquid and N = 7 Stiefel liquid (Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.07817">https://arxiv.org/abs/2111.07817</a></span> Gravity from symmetry breaking phase transition ***** (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.08639">https://arxiv.org/abs/2111.08639</a></span> Anomalous chiral transport with vorticity and torsion: Cancellation of two mixed gravitational anomaly currents in rotating chiral p + ip Weyl condensates (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.08731">https://arxiv.org/abs/2111.08731</a></span> Phonon-induced rotation of the electronic nematic director in superconducting Bi2Se3 ** (Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.08740">https://arxiv.org/abs/2111.08740</a></span> Interpreting Angle Dependent Magnetoresistance in Layered Materials: Application to Cuprates *** (Debanjan Chowdhury,2 Patrick A. Lee, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.08751">https://arxiv.org/abs/2111.08751</a></span> Lecture Notes on Berry Phases and Topology **** (Barry Bradlyn)</p>
+<p class="p2"><br></p>
+<p class="p1">20211118</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.09516">https://arxiv.org/abs/2111.09516</a></span> Emergent Kondo behavior from gauge fluctuations in spin liquids</p>
+<p class="p2"><br></p>
+<p class="p1">20211119</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.09326">https://arxiv.org/abs/2111.09326</a></span> Exotic Thermal Transitions with Spontaneous Symmetry Breaking ***** (Hanbit Oh and Eun-Gook Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.09323">https://arxiv.org/abs/2111.09323</a></span> Infinite families of fracton fluids with momentum conservation ***** (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.09325">https://arxiv.org/abs/2111.09325</a></span> Dynamical anyon generation in Kitaev honeycomb non-Abelian spin liquids *** (Kevin Slagle, Jason Alicea)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.09516">https://arxiv.org/abs/2111.09516</a></span> Emergent Kondo behavior from gauge fluctuations in spin liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.09448">https://arxiv.org/abs/2111.09448</a></span> Aspects of 5d Seiberg-Witten Theories on S1 (Piljin Yi)</p>
+<p class="p2"><br></p>
+<p class="p1">20211122</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2105.02148">https://arxiv.org/abs/2105.02148</a></span> Emergent Supersymmetry on the Edges ***** (Sungjay Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11954">https://arxiv.org/abs/2106.11954</a></span> Magic in twisted transition metal dichalcogenide bilayers *** (Liang Fu)<br>
+<a href="https://arxiv.org/abs/2109.13411"><span class="s1">https://arxiv.org/abs/2109.13411</span></a> Abelian Chern-Simons Gauge Theory on The Lattice</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.01139">https://arxiv.org/abs/2111.01139</a></span> Non-Invertible Duality Defects in 3+1 Dimensions **** (Yichul Choi, Po-Shen Hsin, Ho Tat Lam, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10369">https://arxiv.org/abs/2111.10369</a></span> Gauge Enhanced Quantum Criticality Between Grand Unifications: Categorical Higher Symmetry Retraction ***** (Juven Wang, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.03058">https://arxiv.org/abs/2111.03058</a></span> Moir ́e metal for catalysis *** (Liang Fu)</p>
+<p class="p2"><br></p>
+<p class="p1">20211123</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.11060">https://arxiv.org/abs/2111.11060</a></span> TB or not TB? Contrasting properties of twisted bilayer graphene and the alternating twist n-layer structures (n = 3,4,5,...) ***** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10433">https://arxiv.org/abs/2111.10433</a></span> Qubit Decoherence and Symmetry Restoration through Real-Time Instantons *** (Alex Kamenev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10707">https://arxiv.org/abs/2111.10707</a></span> Nonlinear non-Hermitian higher-order topological laser (Motohiko Ezawa)<br>
+<a href="https://arxiv.org/abs/2111.11346"><span class="s1">https://arxiv.org/abs/2111.11346</span></a> Knot Topology of Exceptional Point and Non-Hermitian No-Go Theorem **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10498">https://arxiv.org/abs/2111.10498</a></span> An intrinsic topological model in the absence of symmetry **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10945">https://arxiv.org/abs/2111.10945</a></span> Conformal Boundary Conditions of Symmetry-Enriched Quantum Critical Spin Chains</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10479">https://arxiv.org/abs/2111.10479</a></span> Non-Fermi Liquids, Strange Metals and Quasi-metaparticles ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10580">https://arxiv.org/abs/2111.10580</a></span> Unveiling the Kondo cloud: unitary RG study of the Kondo model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10811">https://arxiv.org/abs/2111.10811</a></span> Anomaly of non-Abelian discrete symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10720">https://arxiv.org/abs/2111.10720</a></span> Exact QFT duals of AdS black holes (Saebyeok Jeong, Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.10895">https://arxiv.org/abs/2111.10895</a></span> Quantum chaos in a weakly-coupled field theory with nonlocality *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.11040">https://arxiv.org/abs/2111.11040</a></span> A physicist-friendly reformulation of the mod-two Atiyah-Patodi-Singer index</p>
+<p class="p2"><br></p>
+<p class="p1">20211124</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2102.02820">https://arxiv.org/abs/2102.02820</a></span> Charge-4e Superconductivity from Nematic Superconductors in 2D and 3D ***** (Shao-Kai Jian, Yingyi Huang, Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.11808">https://arxiv.org/abs/2111.11808</a></span> Hidden Breathing Kagome Topology in Hexagonal Transition Metal Dichalcogenides (Jun Jung, Yong-Hyun Kim)<br>
+</p>
+<p class="p1">20211125</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12096">https://arxiv.org/abs/2111.12096</a></span> Spin chains, defects, and quantum wires for the quantum-double edge (Wenjie Ji, Jason Alicea, John Preskill)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12107">https://arxiv.org/abs/2111.12107</a></span> Magic-angle Twisted Bilayer Systems with Quadratic-Band-Touching: Exactly Flat Bands with High-Chern Number *** (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12089">https://arxiv.org/abs/2111.12089</a></span> Generalized Symmetries of the Graviton</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12177">https://arxiv.org/abs/2111.12177</a></span> Efficient Product Formulas for Commutators and Applications to Quantum Simulation (Hwanmun Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12268">https://arxiv.org/abs/2111.12268</a></span> Localization state induced superconductivity, pseudogap and strange metal ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12291">https://arxiv.org/abs/2111.12291</a></span> Spin-orbit-entangled nature of magnetic moments and Kitaev magnetism in layered halides α-RuX3 (X = Cl, Br, I) (Heung-Sik Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12318">https://arxiv.org/abs/2111.12318</a></span> Optical response of the Leggett mode in multiband superconductors in the linear response regime</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12357">https://arxiv.org/abs/2111.12357</a></span> Collective excitations in three-band superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12475">https://arxiv.org/abs/2111.12475</a></span> Diagnosing quantum chaos in multipartite systems ***</p>
+<p class="p2"><br></p>
+<p class="p1">20211126</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1910.05351">https://arxiv.org/abs/1910.05351</a></span> Crossing a topological phase transition with a quantum computer *** (Frank Pollmann)</p>
+<p class="p2"><br></p>
+<p class="p1">20211129</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.09906">https://arxiv.org/abs/2111.09906</a></span> Solvable model for a charge-4e superconductor **** (Yuxuan Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.13703">https://arxiv.org/abs/2111.13703</a></span> Electronic spectra with paramagnon fractionalization in the single band Hubbard model *** (Subir Sachdev)</p>
+<p class="p2"><br></p>
+<p class="p1">20211130</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.05147">https://arxiv.org/abs/2104.05147</a></span> Self-duality protected multi-criticality in deconfined quantum phase transitions ***** (Da-Chuan Lu, Cenke Xu, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.05801">https://arxiv.org/abs/2107.05801</a></span> Topological gapless points in superconductors: From the viewpoint of symmetry ***** (Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13556">https://arxiv.org/abs/2107.13556</a></span> Non-Compact Atomic Insulators (B. Andrei Bernevig)<br>
+<a href="https://arxiv.org/abs/2111.14827"><span class="s1">https://arxiv.org/abs/2111.14827</span></a> (3+1)D path integral state sums on curved U(1) bundles and U(1) anomalies of (2+1)D topological phases ***** (Maissam Barkeshli)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
