--- a/arxiv/2021_12_arxiv.html
+++ b/arxiv/2021_12_arxiv.html
@@ -144,7 +144,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.02485">https://arxiv.org/abs/2112.02485</a></span> Topological phase transition at quantum criticality</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.02728">https://arxiv.org/abs/2112.02728</a></span> Non-Hermitian total-loss high-order topological insulator based on 1D Su-Schrieffer-Heeger (SSH)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.03080">https://arxiv.org/abs/2112.03080</a></span> Dynamical mean field theory of moir ́e bilayer transition metal dichalcogenides: phase diagram, resistivity, and quantum criticality (Andrew J. Millis)<br>
-<a href="https://arxiv.org/abs/2112.03061"><span class="s1">https://arxiv.org/abs/2112.03061</span></a> Efficiently preparing GHZ, topological and fracton states by measuring cold atoms *** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.03061">https://arxiv.org/abs/2112.03061</a></span> Efficiently preparing GHZ, topological and fracton states by measuring cold atoms *** (Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.02112">https://arxiv.org/abs/2112.02112</a></span> Quantum criticality and confinement in weak Mott insulators</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.02113">https://arxiv.org/abs/2112.02113</a></span> Neutral Excitations of Quantum Hall States: a Density Matrix Renormalization Group Study (F. D. M. Haldane)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.02137">https://arxiv.org/abs/2112.02137</a></span> Loops in 4+1d Topological Phases ***** (Xie Chen, Arpit Dua, Po-Shen Hsin, Chao-Ming Jian, Wilbur Shirley, Cenke Xu)</p>
@@ -189,7 +189,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1">20211217</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.02658">https://arxiv.org/abs/2110.02658</a></span> Rank-2 Toric Code in Two Dimensions ***** (Yun-Tak Oh, Jintae Kim, Eun-Gook Moon, Jung Hoon Han)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2104.07559">https://arxiv.org/abs/2104.07559</a></span> Hydrodynamics of quantum spin liquids ** (S. L. Sondhi)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1905.06969">https://arxiv.org/abs/1905.06969</a></span> Gapless topological phases and symmetry-enriched quantum criticality (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1905.06969">https://arxiv.org/abs/1905.06969</a></span> Gapless topological phases and symmetry-enriched quantum criticality (Frank Pollmann)Gapless topological phases and symmetry-enriched quantum criticality (Frank Pollmann)</p>
 <p class="p2"><br></p>
 <p class="p1">20211220</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.09157">https://arxiv.org/abs/2112.09157</a></span> Disordered vector models: from higher spins to incipient strings **</p>
@@ -220,6 +220,27 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.12735">https://arxiv.org/abs/2112.12735</a></span> Higher-Form Subsystem Symmetry Breaking: Subdimensional Criticality and Fracton Phase Transitions *****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.12776">https://arxiv.org/abs/2112.12776</a></span> Trions in Twisted Bilayer Graphene **** (Frank Schindler, Oskar Vafek, B. Andrei Bernevig)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.12783">https://arxiv.org/abs/2112.12783</a></span> Quantum-critical resistivity of strange metals in a magnetic field *** (Chandra M. Varma)</p>
+<p class="p2"><br></p>
+<p class="p1">20211228</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.13797">https://arxiv.org/abs/2112.13797</a></span> Emulating twisted double bilayer graphene with a multiorbital optical lattice **** (Junhyun Lee, J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.13489">https://arxiv.org/abs/2112.13489</a></span> SYK Lindbladian ***** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.13617">https://arxiv.org/abs/2112.13617</a></span> Non-CSS color codes on 2D lattices : Models and Topological Properties ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.13837">https://arxiv.org/abs/2112.13837</a></span> Field-tuned and zero-field fractional Chern insulators in magic angle graphene **** (Eslam Khalaf, Michael P. Zaletel, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.13092">https://arxiv.org/abs/2112.13092</a></span> Fragmentation in Frustrated Magnets - A review ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.12828">https://arxiv.org/abs/2112.12828</a></span> Gravity and the Crossed Product ** (Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.00961">https://arxiv.org/abs/2110.00961</a></span> Lectures on quantum supreme matter ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.13184">https://arxiv.org/abs/2112.13184</a></span> TeNeS: Tensor Network Solver for Quantum Lattice Systems **</p>
+<p class="p2"><br></p>
+<p class="p1">20211230</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14744">https://arxiv.org/abs/2112.14744</a></span> Robustness of Antiferromagnetism in the Su-Schrieffer-Heeger-Hubbard model ** (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14745">https://arxiv.org/abs/2112.14745</a></span> Wide-range T2 resistivity and umklapp scattering in moir ́e graphene (Leonid Levitov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14752">https://arxiv.org/abs/2112.14752</a></span> Interaction-induced velocity renormalization in magic angle twisted trilayer graphene (Laura Classen, J. H. Pixley, Elio J. K ̈onig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14293">https://arxiv.org/abs/2112.14293</a></span> Lorentz violation in Dirac and Weyl semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14388">https://arxiv.org/abs/2112.14388</a></span> Non-Equilibrating a Black Hole with Inhomogeneous Quantum Quench (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14750">https://arxiv.org/abs/2112.14750</a></span> Multiorbital spin-triplet pairing and spin resonance in the heavy-fermion (Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.13868">https://arxiv.org/abs/2112.13868</a></span> Super universality of dimerised SU(N + M) spin chains (R. Shankar)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.13931">https://arxiv.org/abs/2112.13931</a></span> Entanglement of skeletal regions (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14717">https://arxiv.org/abs/2112.14717</a></span> Topological defect network representations of fracton stabilizer codes *** (Arpit Dua, Wilbur Shirley, Dominic J. Williamson)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
